Replace Stream.collect(Collectors.toList()) with Stream.toList() as required by SonarCloud
Co-authored-by: aliammari1 <100803794+aliammari1@users.noreply.github.com>